--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,62 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+    h1,h2,h3,h4,h5,h6 {
+        font-family: 'Gloria Hallelujah', cursive;
+    }
+    html {
+        font-family: 'Neucha', cursive;
+    }
+}
+
+@layer utilities {
+    .paper,
+    .paper-1 {
+        border-bottom-left-radius: 15px 255px;
+        border-bottom-right-radius: 225px 15px;
+        border-top-left-radius: 255px 15px;
+        border-top-right-radius: 15px 225px;
+    }
+
+    .paper-2 {
+        border-bottom-left-radius: 185px 25px;
+        border-bottom-right-radius: 20px 205px;
+        border-top-left-radius: 125px 25px;
+        border-top-right-radius: 10px 205px;
+    }
+
+    .paper-3 {
+        border-bottom-left-radius: 225px 15px;
+        border-bottom-right-radius: 15px 255px;
+        border-top-left-radius: 15px 225px;
+        border-top-right-radius: 255px 15px;
+    }
+
+    .paper-4 {
+        border-bottom-left-radius: 25px 115px;
+        border-bottom-right-radius: 155px 25px;
+        border-top-left-radius: 15px 225px;
+        border-top-right-radius: 25px 150px;
+    }
+
+    .paper-5 {
+        border-bottom-left-radius: 20px 115px;
+        border-bottom-right-radius: 15px 105px;
+        border-top-left-radius: 250px 15px;
+        border-top-right-radius: 25px 80px;
+    }
+    .paper-6 {
+        border-bottom-left-radius: 15px 225px;
+        border-bottom-right-radius: 20px 205px;
+        border-top-left-radius: 28px 125px;
+        border-top-right-radius: 100px 30px;
+    }
+
+    .no-stroke {
+        stroke-dashoffset: 60;
+        stroke-dasharray: 60;
+    }
+}
