--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,8 +55,73 @@
         border-top-right-radius: 100px 30px;
     }
 
+    .paper-circle {
+        border-radius: 43% 57% 39% 61% / 49% 38% 62% 51% ;
+    }
+
     .no-stroke {
         stroke-dashoffset: 60;
         stroke-dasharray: 60;
+    }
+
+    .svg-underline {
+        position: relative;
+        /*width: min-content;*/
+    }
+
+    .svg-underline:after {
+        content: '';
+        background-image: url("/underline.svg");
+        background-repeat: no-repeat;
+        position: absolute;
+        bottom: -0.4rem;
+        left: -0.5rem;
+        right: -0.5rem;
+        height: 0.75rem;
+        display: block;
+        background-size: 100% 5px;
+    }
+}
+
+@layer components {
+
+    .cdx-marker {
+        background-color: theme('colors.tertiary.200') !important;
+    }
+
+    h1.ce-header {
+        font-size: theme("fontSize.2xl");
+        margin: theme("margin.5") 0;
+        color: theme('colors.primary.600');
+    }
+
+    h2.ce-header {
+        @apply svg-underline;
+        font-size: theme("fontSize.xl");
+        width: max-content;
+        margin: theme("margin.3") auto;
+        color: theme('colors.primary.600');
+    }
+
+    h3.ce-header {
+        font-size: theme("fontSize.lg");
+        color: theme('colors.secondary.600');
+
+    }
+
+    h4.ce-header {
+        font-size: theme("fontSize.base");
+        color: theme('colors.tertiary.600');
+
+    }
+
+    h5.ce-header {
+        font-size: theme("fontSize.sm");
+        color: theme('colors.tertiary.600');
+
+    }
+    h6.ce-header {
+        font-size: theme("fontSize.xs");
+        color: theme('colors.tertiary.600');
     }
 }
