--- a/styles/globals.css
+++ b/styles/globals.css
@@ -138,3 +138,31 @@ h6.ce-header {
     height: 1em;
     display: inline-block;
 }
+
+.ltr {
+    text-align: left;
+}
+
+.rtl {
+    text-align: right;
+}
+
+.editor-placeholder {
+    color: #999;
+    overflow: hidden;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    user-select: none;
+    pointer-events: none;
+}
+
+.editor-paragraph {
+    margin: 0 0 15px 0;
+    position: relative;
+    outline: none;
+}
+
+.no-child-outline * {
+    outline: none;
+}
